buildscript {
    ext {
        springBootVersion = '2.2.6.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile('org.springframework.boot:spring-boot-starter-data-jpa')
    compile('org.hibernate:hibernate-java8')
    compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
    runtime('com.h2database:h2')
    testCompile('org.junit.jupiter:junit-jupiter:5.6.0')
    testCompile('org.assertj:assertj-core:3.15.0')
    testCompile('org.springframework.boot:spring-boot-starter-test')
}

test {
    useJUnitPlatform()
}
